# perfkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example1_mathSpeedTest.cpp  example2_trigUtils.cpp
include/perfkit/bit/: masks.h  ops.h  swap.h
include/perfkit/hash/: pairing.h
include/perfkit/math/: approximation.h  branchless.h  fast_math.h  interpolation.h  trig_utils.h
include/perfkit/memory/: alignment.h
include/perfkit/string/: fast_split.h
